# cloud-docker-images

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  build_images.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/PULL_REQUEST_TEMPLATE/: chatops_pr_template.md  notebook_pr_template.md
.github/workflows/: Build Images.yaml  build_images.yaml  cloud_chatops.yaml  cloud_monitoring.yaml  codeql.yaml  codeql.yml  (+4 more)
cloud-chatops/: .coveragerc  .gitignore  .pylintrc  Dockerfile  INSTALL.md  README.md  app_manifest.yml  chatopscron  deployment.yml  docker-compose.yaml  pytest.ini  requirements.txt  template_config.yml  template_secrets.yml
cloud-monitoring/: .gitignore  Dockerfile  README.md  monitoring.conf  pyproject.toml
cloud-monitoring/cloudMonitoring/: __main__.py  cli.py  collect_vm_stats.py  limits_to_influx.py  service_status_to_influx.py  slottifier.py  utils.py
cloud-monitoring/cloudMonitoring/structs/: slottifier_entry.py
cloud-monitoring/configs/: influxdb.conf
cloud-monitoring/deploy/: cronjob-projectStats.yaml  cronjob-service-stats.yaml  cronjob-slottifier.yaml  cronjob-vm-states.yaml
cloud-monitoring/tests/: test_collect_vm_stats.py  test_limits_to_influx.py  test_send_metric_utils.py  test_service_status_to_influx.py  test_slottifier.py  test_slottifier_entry.py
hartree-notebook/: Dockerfile  requirements.txt
jupyter-all-spark-notebook/: Dockerfile
jupyter-base-notebook-centos/: Dockerfile  Problems encountered.md  jovyan  start-notebook.sh
jupyter-cil-notebook/: Dockerfile
jupyter-datascience-notebook/: Dockerfile
jupyter-llm-notebook/: Dockerfile  README  build.sh  download-models.py  install-sciml-deps.sh
jupyter-minimal/: Dockerfile
jupyter-opengl/: Dockerfile  requirements.yml
jupyter-openstack-notebook/: dockerfile
jupyter-openstack-notebook-centos/: dockerfile
jupyter-pytorch-notebook/: Dockerfile
jupyter-r-notebook/: Dockerfile
jupyter-scipy-notebook/: Dockerfile
jupyter-tensorflow-notebook/: Dockerfile
openstack-rabbit-consumer/: .pylintrc  Dockerfile  README.md  entrypoint.py  requirements.txt
stfc-username-service/: Dockerfile  client.go  go.mod  go.sum  main.go  main_test.go
(+100 files in other folders)
